5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_1017.log
== TEST (2019-03-25 14:14:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = (6371.01*acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = (6371.01*acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = (6371.01*acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
print(round(d, 2))
-- EXECUTION TIME:
0.285995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d = (6371.01*acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:16:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = (6371.01acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    d = (6371.01acos(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:17:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = (6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
print(round(d, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = (6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:18:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = (6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = (6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2)))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:18:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = 6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2))
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = 6371.01*acos*(sin(t1)*sin(t2)+cos(g1)+cos(g2))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:19:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("qual a latitude de t1?")))
g1 = radians(float(input("qual a longitude de g1?")))
t2 = radians(float(input("qual a latitide de t2?")))
g2 = radians(float(input("qual a latitude de g2?")))
from math import*
d = 6371.01*acos*(radians(sin(t1)*sin(t2)+cos(g1)+cos(g2))
print(float(round(d, 2)))
-- ERROR:
File "XXXX", line 11
    print(float(round(d, 2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = r.acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r.acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
AttributeError: 'float' object has no attribute 'acos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = r.acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))
-- EXECUTION TIME:
0.132687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 10, in <module>
    d = r.acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
AttributeError: 'float' object has no attribute 'acos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = 6371.01*acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = 6371.01*acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))
-- EXECUTION TIME:
0.094718
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:51:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = 6371.01*acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))
d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1−g2))


-- EXECUTION TIME:
0.121639
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 12
    d=R.arccos(sen(t1).sen(t2)+cos(t1).cos(t2).cos(g1\u2212g2))
                                                       ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:52:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2")))
r = 6371.01
d = 6371.01*acos( sin(t1) * sin(t2) + cos(t1) * cos (t2) * cos(g1-g2) )
print(float(round(d, 2)))



-- EXECUTION TIME:
0.146294
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
